--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -56,13 +56,13 @@
 
 <footer id="indexfooter">
 	<div class="editbar">
-		<% if @goki_count < 9 %>
-			<%= link_to new_gokicollection_path do %>
+		<% if @goki_count<9 && current_user.gold>@gokiadd_gold.cost %>
+			<%= link_to new_gokicollection_path, data:{confirm:"Pay "+@gokiadd_gold.cost.to_s+" gold to make goki?"} do %>
 				<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
 			<% end %>
 		<% end %>
 		
-		<%= image_submit_tag "gokicollections/index/deletebutton.png", :class=>"footbutton", :id=>"deletebutton" %>
+		<%= image_submit_tag "gokicollections/index/deletebutton.png", :class=>"footbutton", :id=>"deletebutton", data:{confirm:"Are you sure? this won't require any gold."} %>
 
 		<%= link_to gokicollections_gokiexp_path do %>
 			<%= image_tag "gokicollections/index/book.png", :size=>"100x100", :class=>"footbutton" %>
