--- a/app/assets/stylesheets/gokicollections.scss
+++ b/app/assets/stylesheets/gokicollections.scss
@@ -203,6 +203,38 @@ body {
 			}
 		}
 
+
+
+		//ranking page
+		.rankingpage {
+			width: 100%;
+			height: 100%;
+			background: image_url("gokicollections/new/maintex.png") repeat center center / 300px 200px;
+			display:flex;
+			flex-wrap: wrap;
+			justify-content: space-around;
+			
+			.rankingcontent {
+				width: 80%;
+				height: 80%;
+				margin-top: 40px;
+				text-align: center;
+				background: image_url("gokicollections/gokiexp/scroll.png") no-repeat center center / 1200px 1150px;
+				list-style-type: none;
+
+				.rankerlist {
+					width: 100%;
+					color: black;
+					font-size: 30px;
+					margin-left: 10px;
+					padding: 10px;
+					-webkit-text-stroke-width: 1px;
+					-webkit-text-stroke-color: gold;
+					text-shadow: 10px 20px 30px gold;
+				}
+			}
+		}
+
 	}
 
 
@@ -222,6 +254,10 @@ body {
 			#deletebutton {
 				width: 107px;
 				height: 107px;
+			}
+
+			.footbutton {
+				margin-top: 10px;
 			}
 
 			#gold {
