--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -56,9 +56,15 @@
 
 <footer id="indexfooter">
 	<div class="editbar">
-		<% if @goki_count<9 && current_user.gold>@gokiadd_gold.cost %>
-			<%= link_to new_gokicollection_path, data:{confirm:"Pay "+@gokiadd_gold.cost.to_s+" gold to make goki?"} do %>
-				<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
+		<% if @goki_count<9 %>
+			<% if @goki_count>0 && current_user.gold>@gokiadd_gold.cost %>
+				<%= link_to new_gokicollection_path, data:{confirm:"Pay "+@gokiadd_gold.cost.to_s+" gold to make goki?"} do %>
+					<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
+				<% end %>
+			<% elsif @goki_count<=0 %>
+				<%= link_to new_gokicollection_path, data:{confirm:"Rememeber when adding more than two goki, this will require "+@gokiadd_gold.cost.to_s+" gold to make goki"} do %>
+					<%= image_tag "gokicollections/index/newbutton.png", :size=>"100x100", :class=>"footbutton" %>
+				<% end %>
 			<% end %>
 		<% end %>
 		
@@ -68,7 +74,11 @@
 			<%= image_tag "gokicollections/index/book.png", :size=>"100x100", :class=>"footbutton" %>
 		<% end %>
 
+		<%= link_to gokicollections_ranking_path do %>
+			<%= image_tag "gokicollections/ranking/rankinglink.png", :size=>"100x100", :class=>"footbutton" %>
+		<% end %>
+
 		<p id="gold">Gold: <%= current_user.gold %></p>
 	</div>
-</foot>
+</footer>
 <% end %>
