--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -24,7 +24,16 @@
 						<%= check_box_tag("check[#{@users[i-1].goki.id}]", @users[i-1].goki.id) %>
 					</div>
 					<div class="cell_buttom" id="cell_buttom"+<%= i.to_s %>>
-						<p class="gokiname"><%= @users[i-1].goki.name %> (<%= @users[i-1].goki.genre.name %>)   <a href="/maingokis/gindex/<%= @users[i-1].goki.id %>">select</a>  <%= link_to("edit", edit_gokicollection_path(id: @users[i-1].goki.id), html_options={class:"edittag"}) %></p>
+						<p class="gokiname">
+							<%= @users[i-1].goki.name %>
+							(<%= @users[i-1].goki.genre.name %>)
+							<span>
+								<a href="/maingokis/gindex/<%= @users[i-1].goki.id %>">select</a>
+								<% if current_user.gold > @gokiedit_gold.cost %>
+									<%= link_to edit_gokicollection_path(id: @users[i-1].goki.id), data:{confirm:"Pay "+@gokiedit_gold.cost.to_s+" gold to edit this goki?"}, class:"edittag" do %>edit<% end %>
+								<% end %>
+							</span>
+						</p>
 						<p class="gokidesc"><%= @users[i-1].goki.description %></p>
 					</div>
 				</div>
