--- a/app/views/maingokis/index.html.erb
+++ b/app/views/maingokis/index.html.erb
@@ -13,17 +13,17 @@
 	<div id="explanation">
 		<h3>Movement:</h3>
 		<p>press arrow keys to move the goki up/down/right/left</p>
-		<p>press space bar or "1", "2" key to use goki tricks!</p>
+		<p>press space bar or "1", "2" key to use goki tricks! (additional scores will be added)</p>
 		
 		<h3>Icons</h3>
 		<p>top purple icon makes you log out</p>
-		<p>two gold icon shows up when battling makes goki do tricks</p>
+		<p>two gold icons makes goki do tricks. ("1" key binded for left and "2" for right)</p>
 		<p>icon with green bamboo changes background image</p>
 		<p>icon with yellow window closed moves you to gokicollection page</p>
 		
 		<h3>Goki Collection</h3>
 		<p>you can add/edit/destroy goki in gokicollection page.</p>
-		<p>press select to choose goki and regist attack from evil gokijet!</p>
+		<p>press "select" to choose goki and regist attack from evil gokijet!</p>
 	</div>
 </main>
 
