--- a/app/views/layouts/maingokis.html.erb
+++ b/app/views/layouts/maingokis.html.erb
@@ -3,6 +3,7 @@
 	<head>
 		<title>GokiApp</title>
 		<%= csrf_meta_tags %>
+		<%= include_gon %>
 		<%= stylesheet_link_tag 'maingokis', 'data-turbolinks-track': 'reload' %>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<%= javascript_include_tag 'anime-master/lib/anime.min.js', 'data-turbolinks-track': 'reload' %>
