--- a/app/views/gokicollections/index.html.erb
+++ b/app/views/gokicollections/index.html.erb
@@ -87,6 +87,10 @@
 			<%= image_tag "gokicollections/ranking/rankinglink.png", :size=>"100x100", :class=>"footbutton" %>
 		<% end %>
 
+		<%= link_to gokicollections_shop_path do %>
+			<%= image_tag "gokicollections/shop/shopbutton.png", :size=>"100x100", :class=>"footbutton" %>
+		<% end %>
+
 		<p id="gold">Gold: <%= current_user.gold %></p>
 	</div>
 </footer>
