--- a/app/views/layouts/gokicollections.html.erb
+++ b/app/views/layouts/gokicollections.html.erb
@@ -3,6 +3,7 @@
 	<head>
 		<title>GokiCollections</title>
 		<%= csrf_meta_tags %>
+		<%= include_gon %>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
